# voxelius

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  buildshaders.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: building.md  code_style.md
include/: CMakeLists.txt  commandline.hh  common.hh  config.hh  config.hh.in  const.hh  globals.hh  logger.hh  renderer.hh  resources.hh  types.hh  window.hh
include/data/: image.hh  map.hh  tile.hh  tileset.hh  transform.hh  ubo.hh  vertex.hh  vidmode.hh  view.hh
include/editor/: editor.hh  file_browser.hh  logger_out.hh  map_editor.hh  menu_bar.hh
include/gfx/: buffer.hh  framebuffer.hh  pipeline.hh  shader.hh  texture.hh  vertex_array.hh  vertexarray.hh
maps/: sandbox.json
shaders/: CMakeLists.txt  final.frag.hlsl  final.frag.spv  final.vert.hlsl  sandbox.frag.hlsl  sandbox.frag.spv  sandbox.fspv  sandbox.vert.hlsl  sandbox.vert.spv  sandbox.vspv  sprite.frag.hlsl  sprite.frag.spv  sprite.vert.hlsl  sprite.vert.spv  triangle.frag  triangle.fs  triangle.fspv  triangle.vert  triangle.vs  triangle.vspv
src/: CMakeLists.txt  cmdline.cc  commandline.cc  globals.cc  logger.cc  main.cc  mesh.cc  renderer.cc  resources.cc  window.cc
src/client/: CMakeLists.txt  client.cc  mesh.cc  renderer.cc  resources.cc  window.cc
src/client/gl/: buffer.cc  program.cc  shader.cc  texture.cc  vao.cc
src/data/: CMakeLists.txt  map.cc  tileset.cc  vidmode.cc
src/editor/: CMakeLists.txt  editor.cc  file_browser.cc  logger_out.cc  map_editor.cc  menu_bar.cc
src/gfx/: CMakeLists.txt  buffer.cc  mesh.cc  pipeline.cc  renderer.cc  shader.cc  texture.cc  vertexarray.cc
src/gl/: CMakeLists.txt  buffer.cc  program.cc  shader.cc  texture.cc  vao.cc
src/input/: CMakeLists.txt  keyboard.cc
src/render/: CMakeLists.txt  final.cc  map_renderer.cc  maprenderer.cc  mesh.cc  screenshots.cc  sprite_renderer.cc
src/ui/: CMakeLists.txt  file_browser.cc  logger_out.cc  menu_bar.cc  ui.cc
src/util/: CMakeLists.txt  clock.cc  command_line.cc  commandline.cc  file.cc  fs.cc  image.cc  logger.cc
tilesets/: ts.json
tools/: buildshaders.sh
(+67 files in other folders)
